completed event actions

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,10 @@
 <% @events.each do |event| %>
 <p>
 <%= event.name %>
-<%= link_to 'View', event_path(event) %>
+<%= link_to 'View', event_path(event) %> |
+<%= link_to 'Edit', edit_event_path(event) %> |
+<%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %>
+
 </p>
 <% end %>
 
