Connected with heroku

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,14 +1,16 @@
 <h1> All Events </h1>
-
-<%= link_to 'Create Event', new_event_path %>
+<% if user_signed_in?%>
+  <%= link_to 'Create Event', new_event_path %>
+<% end %>
 
 <% @events.each do |event| %>
 <p>
 <%= event.name %>
 <%= link_to 'View', event_path(event) %> |
-<%= link_to 'Edit', edit_event_path(event) %> |
-<%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %>
-
+<% if user_signed_in? %>
+  <%= link_to 'Edit', edit_event_path(event) %> |
+  <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %>
+<% end %>
 </p>
 <% end %>
 
