--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,8 +1,11 @@
 <h1><%= @event.name %></h1>
+<%= image_tag @event.picture if @event.picture.attached? %>
 <h2>Location: <%= @event.location %></h2>
 <p>Website: www.<%= @event.name.downcase.delete(' ') %>.com.au<p>
 <p>Conatct email: <%= @event.contact_email %></p>
 <p>Event info: <%= @event.description %></p>
+<p>Date/s: <%= @event.date_from %> - <%= @event.date_to %></p>
+<p>Event creator: <%= @event.user.email %></p>
 
 <%= link_to "Back", events_path %>
 
