--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,8 +12,30 @@
   <%= render @event.positions %>
 </p>
 
-<%= link_to 'Add a new position', new_event_position_path(@event) %>
- 
+<h2>Add a position:</h2>
+<%= form_with(model: [ @event, @event.positions.build ], local: true) do |form| %>
+  <p>
+    <%= form.label :position_type %><br>
+    <%= form.text_field :position_type %>
+  </p>
+  <p>
+    <%= form.label :rate %><br>
+    <%= form.text_field :rate %>
+  </p>
+  <p>
+    <%= form.label :hours %><br>
+    <%= form.text_field :hours %>
+  </p>
+  <p>
+    <%= form.label :requirements %><br>
+    <%= form.text_area :requirements %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
+
+<%= link_to 'Add a new position', new_event_position_path(@event) %><br>
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
 
