resolved issues with bootstrap

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,5 +1,9 @@
+
 .main-heading {
-  @extend .btn;
+  @extend .col-md-8, .offset-2;
   font-weight: 600 ;
   font-size: 100px;
+  font-family: 'Montserrat';
 }
+
+
