--- a/app/views/events/homepage.html.erb
+++ b/app/views/events/homepage.html.erb
@@ -1,4 +1,9 @@
 <h1 class="main-heading"> Post. Apply. Work. </h1>
 
-<p>Find Job</p>
-<p>Post Job</p>
+
+<% unless user_signed_in? || worker_signed_in? %>
+  <p>Find Job</p>
+    <%= link_to 'Sign up as worker', new_worker_registration_path %>
+  <p>Post Job</p>
+    <%= link_to 'Sign up as user', new_user_registration_path %>
+<% end %>
