--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,6 +12,7 @@
   <%= render @event.positions %>
 </p>
 
+<% if user_signed_in? %>
 <h2>Add a position:</h2>
 <%= form_with(model: [ @event, @event.positions.build ], local: true) do |form| %>
   <p>
@@ -35,8 +36,10 @@
   </p>
 <% end %>
 
-<%= link_to 'Add a new position', new_event_position_path(@event) %><br>
-<%= link_to 'Edit', edit_event_path(@event) %> |
+
+  <%= link_to 'Add a new position', new_event_position_path(@event) %><br>
+  <%= link_to 'Edit', edit_event_path(@event) %> 
+<% end %>
 <%= link_to 'Back', events_path %>
 
 
