--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,5 @@
+<h2>Tender</h2>
+
 <% if user_signed_in? %>
   Welcome: <%= current_user.email %>
   <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
@@ -5,9 +7,7 @@
   Welcome: <%= current_worker.email %>
   <%= link_to 'Sign out', destroy_worker_session_path, method: :delete %>
 <% else %>
-  <%= link_to 'Sign up as user', new_user_registration_path %>
   <%= link_to 'Sign in as user', new_user_session_path %>
-  <%= link_to 'Sign up as worker', new_worker_registration_path %>
   <%= link_to 'Sign in as worker', new_worker_session_path %>
 <% end %>
 
