added navbar links

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,13 +3,13 @@
 <% if user_signed_in? %>
   Welcome: <%= current_user.email %>
   <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-  <div>Browse Events</div>
-  <div>Dashboard</div>
+  <%= link_to 'Browse Events', events_path %> 
+  <%= link_to 'Dashboard', user_dashboard_path %>
 <% elsif worker_signed_in? %> 
   Welcome: <%= current_worker.email %>
   <%= link_to 'Sign out', destroy_worker_session_path, method: :delete %>
-  <div>Browse Events</div>
-  <div>Dashboard</div>
+  <%= link_to 'Browse Events', events_path %> 
+  <%= link_to 'Dashboard', worker_dashboard_path %>
 <% else %>
   <%= link_to 'Sign in as user', new_user_session_path %>
   <%= link_to 'Sign in as worker', new_worker_session_path %>
