--- a/app/views/worker_profiles/show.html.erb
+++ b/app/views/worker_profiles/show.html.erb
@@ -23,10 +23,33 @@
 
 
 <h1>Applications</h1>
-<h2>Processing</h2>
-
+<h2>Pending</h2>
+<% current_worker.applications.each do |application| %>
+<% if application.status == "pending" %>
+<p>Event: <%= application.position.event.name %>
+<p>Date: <%= application.position.event.date_from %> - <%= application.position.event.date_to %>
+<p>Position: <%= application.position. position_type %></p>
+<p>Application status: <%= application.status %></p>
+<% end %>
+<% end %>
 
 <h2>Accepted</h2>
+<% current_worker.applications.each do |application| %>
+<% if application.status == "accepted" %>
+<p>Event: <%= application.position.event.name %>
+<p>Date: <%= application.position.event.date_from %> - <%= application.position.event.date_to %>
+<p>Position: <%= application.position. position_type %></p>
+<p>Application status: <%= application.status %></p>
+<% end %>
+<% end %>
 
 
 <h2>Rejected</h2>
+<% current_worker.applications.each do |application| %>
+<% if application.status == "rejected" %>
+<p>Event: <%= application.position.event.name %>
+<p>Date: <%= application.position.event.date_from %> - <%= application.position.event.date_to %>
+<p>Position: <%= application.position. position_type %></p>
+<p>Application status: <%= application.status %></p>
+<% end %>
+<% end %>
