added cancel and delete to applications and positions

--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -1,24 +1,27 @@
 <h1> Upcoming Events </h1>
 
 <% current_user.events.each do |event| %>
-  <p><%= image_tag event.picture if event.picture.attached? %></p>
-  <p><%= event.name %></p>
-  <p>Dates: <%= event.date_from %> - <%= event.date_to %></p>
-  <p>Location: <%= event.location %></p>
-  <p>Position: <% event.positions.each do |position| %>
-    <%= position.position_type %>
-    <%= link_to 'Edit', edit_event_position_path(event, position) %>
-  <% end %>
-  </p>
-  <%= link_to 'Edit', edit_event_path(event) %> |
-  <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %> |
-  <%= link_to 'Add a new position', new_event_position_path(event) %>  
+  <% if event.date_from > Time.now %>
+    <p><%= image_tag event.picture if event.picture.attached? %></p>
+    <p><%= event.name %></p>
+    <p>Dates: <%= event.date_from %> - <%= event.date_to %></p>
+    <p>Location: <%= event.location %></p>
+    <p>Position: <% event.positions.each do |position| %>
+      <p><%= position.position_type %><p>
+      <%= link_to 'Edit', edit_event_position_path(event, position) %> |
+      <%= link_to 'Delete', event_position_path(event, position), method: :delete, data: { confirm: 'Are you sure you want to delete the position?' }  %> 
+    <% end %>
+    </p>
+    <%= link_to 'Edit', edit_event_path(event) %> |
+    <%= link_to 'Delete Event', event_path(event), method: :delete, data: { confirm: 'Are you sure you want to delete the event?' }  %> |
+    <%= link_to 'Add a new position', new_event_position_path(event) %> 
+  <% end %> 
 <% end %>
-  <p>
-<%= link_to 'Add a new event', new_event_path %>
-  </p>
 
-  <h1>Applications</h1>
+
+<%= link_to 'Create event', new_event_path %>
+
+  <h2>Pending Applications</h2>
   <% current_user.events.each do |event| %>
     <% event.pending_applications.each do |application| %>
       <p>Event: <%= event.name %></p>
@@ -31,9 +34,8 @@
     <% end %>
   <% end %>
 
-  
-  <% current_user.events.each do |event| %>
   <h2>Accepted Applications</h2>
+  <% current_user.events.each do |event| %>
     <% event.accepted_applications.each do |application| %>
       <p>Event: <%= event.name %></p>
       <p>Position: <%= application.position.position_type %></p>
@@ -44,8 +46,8 @@
     <% end %>
   <% end %>
    
-   <% current_user.events.each do |event| %>
    <h2>Rejected Applications</h2>
+   <% current_user.events.each do |event| %>
     <% event.rejected_applications.each do |application| %>
       <p>Event: <%= event.name %></p>
       <p>Position: <%= application.position.position_type %></p>
@@ -55,4 +57,19 @@
       <p>Status: Rejected</p>
     <% end %>
   <% end %>
+
+
+
+
+  <h1> Past Events </h1>
+
+<% current_user.events.each do |event| %>
+  <% if event.date_from < Time.now %>
+    <p><%= image_tag event.picture if event.picture.attached? %></p>
+    <p><%= event.name %></p>
+    <p>Dates: <%= event.date_from %> - <%= event.date_to %></p>
+    <p>Location: <%= event.location %></p>
+    <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %> |
+  <% end %>
+<% end %>
 
