--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,13 +1,23 @@
-<h1> All Events </h1>
+<h1> Upcoming Events </h1>
 
 <% @events.each do |event| %>
-<p>
-<%= event.name %>
-<%= link_to 'View', event_path(event) %> |
-<% if user_signed_in? %>
-  <%= link_to 'Edit', edit_event_path(event) %> |
-  <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %>
-<% end %>
-</p>
+  <% if event.date_from > Time.now %>
+    <h3><%= event.name %></h3>
+    <p>Date: <%= event.date_from%> - <%=event.date_to %></p>
+    <p>Location: <%= event.location %></p>
+
+    <%= link_to 'View Details', event_path(event) %> 
+    <% if current_user == event.user %>
+      <%= link_to 'Edit', edit_event_path(event) %> |
+      <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %>
+    <% end %>
+  <% end %>
 <% end %>
 
+  <% if false %>
+    <p> Past events: </p>
+    <h3><%= event.name %></h3>
+    <p>Date: <%= event.date_from%> - <%=event.date_to %></p>
+    <p>Location: <%= event.location %></p>
+    <% end %>
+ 
