--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,15 +4,15 @@
 <p>Website: www.<%= @event.name.downcase.delete(' ') %>.com.au<p>
 <p>Conatct email: <%= @event.contact_email %></p>
 <p>Event info: <%= @event.description %></p>
-<p>Date/s: <%= @event.date_from %> - <%= @event.date_to %></p>
+<p>Date: <%= @event.date_from %> - <%= @event.date_to %></p>
 <p>Event creator: <%= @event.user.email %></p>
 
-<h2>Positions</h2>
+<h3>Available Positions for <%= @event.name %></h3>
 <p>
   <%= render @event.positions %>
 </p>
 
-<% if user_signed_in? %>
+<% if current_user == @event.user %>
   <%= link_to 'Add a new position', new_event_position_path(@event) %><br>
   <%= link_to 'Edit', edit_event_path(@event) %> 
 <% end %>
