--- a/app/views/worker_profiles/_form.html.erb
+++ b/app/views/worker_profiles/_form.html.erb
@@ -5,9 +5,21 @@
     <%= form.label :first_name %>
     <%= form.text_field :first_name %>
   </div>
-  <div class="field">
+   <div class="field">
     <%= form.label :last_name %>
     <%= form.text_field :last_name %>
+  </div>
+  <div class="field">
+    <%= form.label :city %>
+    <%= form.text_field :city %>
+  </div>
+  <div class="field">
+    <%= form.label :country %>
+    <%= form.text_field :country %>
+  </div>
+  <div class="field">
+    <%= form.label :number %>
+    <%= form.text_field :number %>
   </div>
   <div class='field'>
     <%= form.label :bio %>
