--- a/app/assets/stylesheets/worker_profiles.scss
+++ b/app/assets/stylesheets/worker_profiles.scss
@@ -1,3 +1,45 @@
-// Place all the styles related to the worker_profiles controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+
+.worker-container {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: yellowgreen;
+}
+
+.worker-profile-container {
+  display: flex;
+  flex-direction: column;
+  background-color: yellow;
+  width: 40%;
+  margin-top: 20px;
+}
+
+.worker-application-container {
+  display: flex;
+  flex-direction: column;
+  background-color: red;
+  width: 40%;
+  margin-top: 20px;
+}
+
+.pending-application-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1vh;
+  
+}
+
+.accepted-application-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1vh;
+}
+
+.rejected-application-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1vh;
+}
+
+.profile-picture {
+  // clip-path: circle(50% at 50% 50%);
+}
