--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,18 +1,19 @@
 <h2>Tender</h2>
 
 <% if user_signed_in? %>
-  Welcome: <%= current_user.email %>
+  <p>Signed in as user: <%= current_user.email %></p>
   <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
   <%= link_to 'Browse Events', events_path %> 
   <%= link_to 'Dashboard', user_dashboard_path %>
 <% elsif worker_signed_in? %> 
-  Welcome: <%= current_worker.email %>
+  Signed in as worker: <%= current_worker.email %>
   <%= link_to 'Sign out', destroy_worker_session_path, method: :delete %>
   <%= link_to 'Browse Events', events_path %> 
   <%= link_to 'Dashboard', worker_dashboard_path %>
 <% else %>
   <%= link_to 'Sign in as user', new_user_session_path %>
   <%= link_to 'Sign in as worker', new_worker_session_path %>
+  <%= link_to 'About Us' %>
 <% end %>
 
 
