added css to worker homepage

--- a/app/views/worker_profiles/show.html.erb
+++ b/app/views/worker_profiles/show.html.erb
@@ -8,39 +8,48 @@
     <p class="profile-picture">
     <%= image_tag current_worker.worker_profile.photo if current_worker.worker_profile.photo.attached? %>
     </p>
-    <p>
-    <%= current_worker.worker_profile.first_name %> <%= current_worker.worker_profile.last_name %>
-    </p>
-    <p>
-    Location: <%= current_worker.worker_profile.city %>, <%= current_worker.worker_profile.country %>
-    </p>
-    <p>
-    Contact email: <%= current_worker.email %>
-    </p>
-    <p>
-    <%= current_worker.worker_profile.bio %>
-    </p>
-    <p>
-    <%= link_to 'Download CV', download_resume_path %> 
-    </p>
-    <p>
-    <%= link_to 'Download Document', download_document_path %> 
-    </p>
-    <%= link_to 'Edit Profile', edit_worker_profile_path(current_worker.worker_profile) %>
+    <div class="worker-information">
+      <p class="worker-name">
+      <%= current_worker.worker_profile.first_name %> <%= current_worker.worker_profile.last_name %>
+      </p>
+      <p class="worker-location">
+      <%= image_tag("pin.png", :alt => "location pin") %>
+      Location: <%= current_worker.worker_profile.city %>, <%= current_worker.worker_profile.country %>
+      </p>
+      <p class="worker-email">
+      <%= image_tag("mail.png", :alt => "email pin") %>
+      Contact email: <%= current_worker.email %>
+      </p>
+      <p class="worker-bio">
+      <%= image_tag("user.png", :alt => "bio pin") %>
+      <%= current_worker.worker_profile.bio %>
+      </p>
+      <p>
+      <%= link_to 'Download CV', download_resume_path %> 
+      </p>
+      <p>
+      <%= link_to 'Download Qualification:', download_document_path %> 
+      </p>
+      <%= link_to 'Edit Profile', edit_worker_profile_path(current_worker.worker_profile) %>
+    </div>
   </div>
 
 
   <div class="worker-application-container">
     <h1>Applications</h1>
-    <div class="pending-application-conatiner">
+    <div class="pending-application-container">
       <h2>Pending</h2>
       <% current_worker.applications.each do |application| %>
         <% if application.status == "pending" %>
-          <p>Event: <%= application.position.event.name %></p>
+        <div class="application-card">  
+          <p class="application-card-title"><%= application.position.event.name %></p>
           <p>Date: <%= application.position.event.date_from %> - <%= application.position.event.date_to %></p>
           <p>Position: <%= application.position. position_type %></p>
-          <p>Application status: <%= application.status %></p>
-          <%= button_to 'Cancel', cancel_event_position_path(application.position.event, application), method: :delete, data: { confirm: 'Are you sure you want to cancel your application?' } %>
+          <p>Location: <%= application.position.event.location %></p>
+          <div class="card-button">
+            <%= button_to 'Cancel', cancel_event_position_path(application.position.event, application), method: :delete, data: { confirm: 'Are you sure you want to cancel your application?' } %>
+          </div>
+        </div>
         <% end %>
       <% end %>
     </div>
@@ -48,11 +57,15 @@
       <h2>Accepted</h2>
       <% current_worker.applications.each do |application| %>
         <% if application.status == "accepted" %>
-          <p>Event: <%= application.position.event.name %></p>
+        <div class="application-card">
+          <p class="application-card-title"><%= application.position.event.name %></p>
           <p>Date: <%= application.position.event.date_from %> - <%= application.position.event.date_to %></p>
           <p>Position: <%= application.position. position_type %></p>
-          <p>Application status: <%= application.status %></p>
-        <%= button_to 'Cancel', cancel_event_position_path(application.position.event, application), method: :delete, data: { confirm: 'Are you sure you want to cancel your accepted position?' } %>
+          <p>Location: <%= application.position.event.location %></p>
+          <div class="card-button">
+            <%= button_to 'Cancel', cancel_event_position_path(application.position.event, application), method: :delete, data: { confirm: 'Are you sure you want to cancel your accepted position?' } %>
+          </div>
+        </div>
         <% end %>
       <% end %>
     </div>
@@ -60,11 +73,15 @@
       <h2>Rejected</h2>
       <% current_worker.applications.each do |application| %>
         <% if application.status == "rejected" %>
-          <p>Event: <%= application.position.event.name %></p>
+        <div class="application-card">
+          <p class="application-card-title"><%= application.position.event.name %></p>
           <p>Date: <%= application.position.event.date_from %> - <%= application.position.event.date_to %></p>
           <p>Position: <%= application.position. position_type %></p>
-          <p>Application status: <%= application.status %></p>
-          <%= button_to 'Delete', cancel_event_position_path(application.position.event, application), method: :delete %>
+          <p>Location: <%= application.position.event.location %></p>
+          <div class="card-button">
+            <%= button_to 'Delete', cancel_event_position_path(application.position.event, application), method: :delete %>
+          </div>
+        </div>
         <% end %>
       <% end %>
     </div>
