--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,13 +1,16 @@
- @import "bootstrap";
  @import "homepage";
  @import "worker_profiles"; 
  
  body {
    font-family: 'Montserrat';
-   background: ghostwhite;
+   background-image: url('/assets/background.jpg');
+   background-size: cover;
+   padding: 0;
+   margin: 0;
  }
 
  p {
    margin: 0;
    padding: 0;
  }
+
