--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
  @import "homepage";
  @import "worker_profiles"; 
+ @import "events";
  
  body {
    font-family: 'Montserrat';
@@ -7,6 +8,10 @@
    background-size: cover;
    padding: 0;
    margin: 0;
+   background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
  }
 
  p {
