added more styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
  @import "homepage";
  @import "worker_profiles"; 
  @import "events";
+ @import "navbar";
+ @import "user_profile";
  
  body {
    font-family: 'Montserrat';
