--- a/app/views/positions/_position.html.erb
+++ b/app/views/positions/_position.html.erb
@@ -1,20 +1,26 @@
-<p>
-  <b>Position:</b>
-  <%= position.position_type %>
-</p>
-<p>
-  <b>Hours:</b>
-  <%= position.hours %>
-</p>
-<p>
-  <b>Rate:</b>
-  £<%= position.rate %>
-</p>
-<p>
-  <b>Requirements:</b>
-  <%= position.requirements %>
-</p>
+<div class="position-card">
+  <p>
+    <b>Position:</b>
+    <%= position.position_type %>
+  </p>
+  <p>
+    <b>Hours:</b>
+    <%= position.hours %>
+  </p>
+  <p>
+    <b>Rate:</b>
+    £<%= position.rate %>
+  </p>
+  <p>
+    <b>Requirements:</b>
+    <%= position.requirements %>
+  </p>
+  <p>
+    <b>Additional Information:</b>
+    <%= position.additional_information %>
+  </p>
 
-<% if worker_session %>
-  <%= button_to 'Apply', apply_event_position_path(@event, position) %>
-<% end %>
+  <% if worker_session %>
+    <%= button_to 'Apply', apply_event_position_path(@event, position) %>
+  <% end %>
+</div>
