--- a/app/assets/stylesheets/user_profile.scss
+++ b/app/assets/stylesheets/user_profile.scss
@@ -1,3 +1,59 @@
-// Place all the styles related to the User_Profile controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.user-dashboard-container {
+  display: flex;
+}
+
+.user-dashboard-container h2 {
+  margin-left: 20px;
+}
+
+.user-event-card {
+  display: flex;
+  flex-direction: column;
+  background-color: seashell;
+  margin: 20px;
+  width: 40vw;
+  padding: 20px;
+}
+
+.user-event-card img {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  margin-right: 30px;
+}
+
+.user-applications-card {
+  background-color: seashell;
+  margin: 20px;
+  width: 40vw;
+  padding: 20px;
+}
+
+.user-left {
+  display: flex;
+  flex-direction: column;
+  margin-left: 40px;
+}
+
+.user-right {
+  display: flex;
+  flex-direction: column;
+}
+
+.app-buttons {
+  display: flex;
+  justify-content: flex-end;}
+
+.app-buttons p {
+  margin: 10px;
+}
+
+.top-section {
+  display: flex;
+}
+
+.event-name {
+  font-size: 25px;
+  font-weight: bolder;
+}
+
