--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,21 +1,29 @@
-<h1><%= @event.name %></h1>
-<%= image_tag @event.picture if @event.picture.attached? %>
-<h2>Location: <%= @event.location %></h2>
-<p>Website: www.<%= @event.name.downcase.delete(' ') %>.com.au<p>
-<p>Conatct email: <%= @event.contact_email %></p>
-<p>Event info: <%= @event.description %></p>
-<p>Date: <%= @event.date_from %> - <%= @event.date_to %></p>
-<p>Event creator: <%= @event.user.email %></p>
+<div class="event-show-container">
+  <div class="event-and-position-container">
 
-<h3>Available Positions for <%= @event.name %></h3>
-<p>
-  <%= render @event.positions %>
-</p>
+    <div class="event-show-card">
+      <h1><%= @event.name %></h1>
+      <%= image_tag @event.picture if @event.picture.attached? %>
+      <h2>Location: <%= @event.location %></h2>
+      <p>Website: www.<%= @event.name.downcase.delete(' ') %>.com.au<p>
+      <p>Conatct email: <%= @event.contact_email %></p>
+      <p>Event info: <%= @event.description %></p>
+      <p>Date: <%= @event.date_from %> - <%= @event.date_to %></p>
+      <p>Event creator: <%= @event.user.email %></p>
+    </div>
+    <div class="event-show-position">
+      <h3>Available Positions:</h3>
+      <p>
+        <%= render @event.positions %>
+      </p>
 
-<% if current_user == @event.user %>
-  <%= link_to 'Add a new position', new_event_position_path(@event) %><br>
-  <%= link_to 'Edit', edit_event_path(@event) %> 
-<% end %>
-<%= link_to 'Back', events_path %>
+      <% if current_user == @event.user %>
+        <%= link_to 'Add a new position', new_event_position_path(@event) %><br>
+        <%= link_to 'Edit', edit_event_path(@event) %> 
+      <% end %>
+      <%= link_to 'Back', events_path %>
+    </div>
+  </div>
+</div>
 
 
