--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,20 +1,23 @@
-<h2>Tender</h2>
-
-<% if user_signed_in? %>
-  <p>Signed in as user: <%= current_user.email %></p>
-  <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-  <%= link_to 'Browse Events', events_path %> 
-  <%= link_to 'Dashboard', user_dashboard_path %>
-<% elsif worker_signed_in? %> 
-  Signed in as worker: <%= current_worker.email %>
-  <%= link_to 'Sign out', destroy_worker_session_path, method: :delete %>
-  <%= link_to 'Browse Events', events_path %> 
-  <%= link_to 'Dashboard', worker_dashboard_path %>
-<% else %>
-  <%= link_to 'Sign in as user', new_user_session_path %>
-  <%= link_to 'Sign in as worker', new_worker_session_path %>
-  <%= link_to 'About Us' %>
+<div class="nav-container">
+  <h2>tender</h2>
+  <% if user_signed_in? %>
+    <div class="signed-in">
+      <div class="button"><%= link_to 'Browse Events', events_path %></div>
+      <div class="button"><%= link_to 'Dashboard', user_dashboard_path %></div>
+      <div class="email"><%= current_user.email %></div>
+      <div class="button"><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></div>
+    </div>
+  <% elsif worker_signed_in? %> 
+    Signed in as worker: <%= current_worker.email %>
+    <%= link_to 'Sign out', destroy_worker_session_path, method: :delete %>
+    <%= link_to 'Browse Events', events_path %> 
+    <%= link_to 'Dashboard', worker_dashboard_path %>
+  <% else %>
+    <%= link_to 'Sign in as user', new_user_session_path %>
+    <%= link_to 'Sign in as worker', new_worker_session_path %>
+    <%= link_to 'About Us' %>
 <% end %>
+</div>
 
 
 
