--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -1,75 +1,86 @@
-<h1> Upcoming Events </h1>
+<div class="user-dashboard-container">
+  <div class="user-left">
+    <h2> Upcoming Events </h2>
+    <% current_user.events.each do |event| %>
+      <% if event.date_from > Time.now %>
+      <div class="user-event-card">
+        <div class="top-section">
+          <div class="image">
+            <p><%= image_tag event.picture if event.picture.attached? %></p>
+          </div>
+          <div class="info">
+            <p class="event-name"><%= event.name %></p>
+            <p>Dates: <%= event.date_from %> to <%= event.date_to %></p>
+            <p>Location: <%= event.location %></p>
+            <p>Position: <% event.positions.each do |position| %>
+            <p><%= position.position_type %></p>
+            <%= link_to 'Edit', edit_event_position_path(event, position) %> |
+            <%= link_to 'Delete', event_position_path(event, position), method: :delete, data: { confirm: 'Are you sure you want to delete the position?' }  %> 
+          </div>
+        </div>
+        <% end %>
+        <div class="links">
+          <%= link_to 'Edit', edit_event_path(event) %> |
+          <%= link_to 'Delete Event', event_path(event), method: :delete, data: { confirm: 'Are you sure you want to delete the event?' }  %> |
+          <%= link_to 'Add a new position', new_event_position_path(event) %> 
+        </div>
 
-<% current_user.events.each do |event| %>
-  <% if event.date_from > Time.now %>
-    <p><%= image_tag event.picture if event.picture.attached? %></p>
-    <p><%= event.name %></p>
-    <p>Dates: <%= event.date_from %> - <%= event.date_to %></p>
-    <p>Location: <%= event.location %></p>
-    <p>Position: <% event.positions.each do |position| %>
-      <p><%= position.position_type %><p>
-      <%= link_to 'Edit', edit_event_position_path(event, position) %> |
-      <%= link_to 'Delete', event_position_path(event, position), method: :delete, data: { confirm: 'Are you sure you want to delete the position?' }  %> 
+      </div>
+      <% end %> 
     <% end %>
-    </p>
-    <%= link_to 'Edit', edit_event_path(event) %> |
-    <%= link_to 'Delete Event', event_path(event), method: :delete, data: { confirm: 'Are you sure you want to delete the event?' }  %> |
-    <%= link_to 'Add a new position', new_event_position_path(event) %> 
-  <% end %> 
-<% end %>
+
+    <%= link_to 'Create event', new_event_path %>
+  </div>
 
 
-<%= link_to 'Create event', new_event_path %>
-
-  <h2>Pending Applications</h2>
-  <% current_user.events.each do |event| %>
-    <% event.pending_applications.each do |application| %>
-      <p>Event: <%= event.name %></p>
-      <p>Position: <%= application.position.position_type %></p>
-      <p>Applicant Name: <%= application.worker.worker_profile.first_name %> <%= application.worker.worker_profile.last_name %></p>
-      <p><%= link_to 'Download CV', download_resume_path %></p>
-      <p><%= link_to 'View Profile', worker_path(application.worker) %>
-      <p><%= button_to 'Accept', accept_event_position_path(event, application), method: :patch %>
-      <p><%= button_to 'Reject', reject_event_position_path(event, application), method: :patch %>
+  <div class="user-right">
+    <h2>Pending Applications</h2>
+    <% current_user.events.each do |event| %>
+      <% event.pending_applications.each do |application| %>
+      <div class="user-applications-card">
+        <p>Event: <%= event.name %></p>
+        <p>Position: <%= application.position.position_type %></p>
+        <p>Applicant Name: <%= application.worker.worker_profile.first_name %> <%= application.worker.worker_profile.last_name %></p>
+        <p><%= link_to 'Download CV', download_resume_path %></p>
+        <p><%= link_to 'View Profile', worker_path(application.worker) %>
+        <div class="app-buttons">
+          <p><%= button_to 'Accept', accept_event_position_path(event, application), method: :patch %>
+          <p><%= button_to 'Reject', reject_event_position_path(event, application), method: :patch %>
+        </div>
+      </div>
+      <% end %>
     <% end %>
-  <% end %>
 
-  <h2>Accepted Applications</h2>
-  <% current_user.events.each do |event| %>
-    <% event.accepted_applications.each do |application| %>
-      <p>Event: <%= event.name %></p>
-      <p>Position: <%= application.position.position_type %></p>
-      <p>Applicant Name: <%= application.worker.worker_profile.first_name %> <%= application.worker.worker_profile.last_name %></p>
-      <p><%= link_to 'Download CV', download_resume_path %></p>
-      <p><%= link_to 'View Profile', worker_path(application.worker) %>
-      <p>Status: Accepted</p>
+    <h2>Accepted Applications</h2>
+    <% current_user.events.each do |event| %>
+      <% event.accepted_applications.each do |application| %>
+        <div class="user-applications-card">
+          <p>Event: <%= event.name %></p>
+          <p>Position: <%= application.position.position_type %></p>
+          <p>Applicant Name: <%= application.worker.worker_profile.first_name %> <%= application.worker.worker_profile.last_name %></p>
+          <p><%= link_to 'Download CV', download_resume_path %></p>
+          <p><%= link_to 'View Profile', worker_path(application.worker) %>
+          <p>Status: Accepted</p>
+        </div>
+      <% end %>
     <% end %>
-  <% end %>
-   
-   <h2>Rejected Applications</h2>
-   <% current_user.events.each do |event| %>
-    <% event.rejected_applications.each do |application| %>
-      <p>Event: <%= event.name %></p>
-      <p>Position: <%= application.position.position_type %></p>
-      <p>Applicant Name: <%= application.worker.worker_profile.first_name %> <%= application.worker.worker_profile.last_name %></p>
-      <p><%= link_to 'Download CV', download_resume_path %></p>
-      <p><%= link_to 'View Profile', worker_path(application.worker) %>
-      <p>Status: Rejected</p>
+    
+    <h2>Rejected Applications</h2>
+    <% current_user.events.each do |event| %>
+      <% event.rejected_applications.each do |application| %>
+        <div class="user-applications-card">
+          <p>Event: <%= event.name %></p>
+          <p>Position: <%= application.position.position_type %></p>
+          <p>Applicant Name: <%= application.worker.worker_profile.first_name %> <%= application.worker.worker_profile.last_name %></p>
+          <p><%= link_to 'Download CV', download_resume_path %></p>
+          <p><%= link_to 'View Profile', worker_path(application.worker) %>
+          <p>Status: Rejected</p>
+        </div>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
+</div>
 
 
 
-
-  <h1> Past Events </h1>
-
-<% current_user.events.each do |event| %>
-  <% if event.date_from < Time.now %>
-    <p><%= image_tag event.picture if event.picture.attached? %></p>
-    <p><%= event.name %></p>
-    <p>Dates: <%= event.date_from %> - <%= event.date_to %></p>
-    <p>Location: <%= event.location %></p>
-    <%= link_to 'Delete', event_path(event), method: :delete, data: { confirm: 'Are you sure?' }  %> |
-  <% end %>
-<% end %>
 
